# zeek-client

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pylintrc  .update-changes.cfg  CHANGES  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  VERSION  pyproject.toml  setup.py  zeek-client
.github/workflows/: test.yml
man/: build.py  zeek-client.1
tests/: .coveragerc  broker.py  test_brokertypes.py  test_cli.py  test_config.py  test_config_io.py  test_config_overrides.py  test_controller.py  test_pylint.py  test_rendering.py  test_types.py  websocket.py
zeekclient/: __init__.py  brokertypes.py  cli.py  config.py  consts.py  controller.py  events.py  logs.py  ssl.py  types.py  utils.py
